<resources>
    <string name="app_name">PhoneBook</string>
    <string name="contacts">Contacts</string>
    <string name="contact_details">Contact details</string>
    <string name="add_contact">Add contact</string>
    <string name="action_settings">Settings</string>
    <string name="exception">Exception</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country">Country</string>
    <string name="country_code">Code</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="counties">Counties</string>
</resources>
