<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/controls_top_bottom_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/first_name_edit_text"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:hint="@string/first_name"
                        android:inputType="none"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/last_name_edit_text"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/controls_top_bottom_margin"
                        android:layout_weight="1"
                        android:hint="@string/last_name"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/country_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/controls_top_bottom_margin"
                        android:layout_weight="1"
                        android:hint="@string/country"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/country_code_edit_text"
                        android:imeOptions="actionNext"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/controls_top_bottom_margin"
                        android:layout_marginEnd="@dimen/controls_top_bottom_margin"
                        android:hint="@string/country_code"
                        android:textSize="@dimen/text_size"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/phone_number_edit_text"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:windowSoftInputMode="stateVisible"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/controls_top_bottom_margin"
                        android:layout_weight="1"
                        android:hint="@string/phone_number"
                        android:textSize="@dimen/text_size"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/gender_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/controls_top_bottom_margin"
                        android:hint="@string/gender"
                        android:textSize="@dimen/text_size" />

                    <CheckBox
                        android:id="@+id/male_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/form_margin"
                        android:layout_marginRight="@dimen/form_margin"
                        android:layout_marginTop="18dp"
                        android:text="@string/male"/>

                    <CheckBox
                        android:id="@+id/female_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/female"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_check_white_24dp"
            app:backgroundTint="@color/colorAccent"
            app:rippleColor="@android:color/white" />
    </FrameLayout>
</RelativeLayout>